fix: shadow flickering on button card-portrait

--- a/src/theme/overrides.ios.scss
+++ b/src/theme/overrides.ios.scss
@@ -14,4 +14,12 @@ ion-app[data-platform~="ios"] {
       @include force-gpu-acceleration;
     }
   }
+
+  // Elements that make use of `filter: drop-shadow`:
+
+  plh-button {
+    .button-container[data-variant~="card-portrait"] {
+      @include force-gpu-acceleration;
+    }
+  }
 }
